# NOVA-CEM

./: .gitignore  Procfile  README.md  pyproject.toml  requirements.txt
docs/: architecture.md
nova/: __init__.py
nova/api/: __init__.py  main.py
nova/cli/: __init__.py  main.py
nova/core/: __init__.py  exceptions.py  input_schema.py  mission.py  types.py
nova/core/analysis/: __init__.py  combustion_stability.py  fatigue.py  ignition.py
nova/core/geometry_engine/: __init__.py  channels.py  heatexchanger_geometry.py  manifold_geometry.py  picogk_bridge.py  primitives.py  rocket_geometry.py
nova/core/knowledge_engine/: __init__.py  rules.py
nova/core/manufacturing/: __init__.py  enforcer.py  slicer.py  validator.py
nova/core/output/: __init__.py  documentation.py  exporter.py  technical_drawing.py  thermal_map.py  trajectory.py
nova/core/physics_solver/: __init__.py  electromagnetics.py  fluid_dynamics.py  heat_transfer.py  nozzle_flow.py  structural.py  thermodynamics.py
nova/feedback/: __init__.py  ingester.py
nova/modules/: __init__.py
nova/modules/nova_bp/: __init__.py  engine.py
nova/modules/nova_ea/: __init__.py  engine.py
nova/modules/nova_hx/: __init__.py  engine.py
nova/modules/nova_rp/: __init__.py  engine.py
nova/web/: __init__.py  main.py
nova/web/static/: app.js  (+2 more)
tests/: test_aerospace_analysis.py  test_cfd_export.py  test_cli_assembly.py  test_cli_clean.py  test_geometry.py  test_input_schema.py  test_mission.py  test_nova_ea.py  test_nova_hx.py  test_nova_rp.py  test_physics.py  test_validator.py  test_web_dashboard.py
