[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nova-cem"
version = "0.1.0"
description = "NOVA Computational Engineering Model: deterministic physics-driven engineering design."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cadquery>=2.4",
    "cea>=3.2.0",
    "fastapi>=0.110",
    "numpy>=1.26",
    "pandas>=2.0",
    "pydantic>=2.5",
    "reportlab>=4.0",
    "scipy>=1.11",
    "trimesh>=4.0",
    "uvicorn>=0.27",
]

[project.optional-dependencies]
geometry = [
    "trimesh>=4.0",
    "open3d>=0.18",
    "pyvista>=0.43",
    "cadquery>=2.4",
]
physics = [
    "cea>=3.2.0",
    "scipy>=1.11",
    "sympy>=1.12",
]
reports = [
    "matplotlib>=3.8",
    "plotly>=5.18",
    "reportlab>=4.0",
]
test = [
    "pytest>=8.0",
    "hypothesis>=6.98",
]
all = [
    "trimesh>=4.0",
    "open3d>=0.18",
    "pyvista>=0.43",
    "cadquery>=2.4",
    "cea>=3.2.0",
    "scipy>=1.11",
    "sympy>=1.12",
    "matplotlib>=3.8",
    "plotly>=5.18",
    "reportlab>=4.0",
    "pytest>=8.0",
    "hypothesis>=6.98",
]

[project.scripts]
nova = "nova.cli.main:main"

[tool.setuptools.packages.find]
include = ["nova*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -p no:cacheprovider"
